--- a/Pandas - Find a Particular Value in a Dataframe.ipynb
+++ b/Pandas - Find a Particular Value in a Dataframe.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3126998c",
+   "id": "cda1a573",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6535ef15",
+   "id": "25f121e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "45150b3e",
+   "execution_count": 3,
+   "id": "077c0e55",
    "metadata": {
     "scrolled": false
    },
@@ -80,7 +80,7 @@
        "2  Charlie  333"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,16 +92,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e30ce826",
+   "id": "c91345b8",
    "metadata": {},
    "source": [
-    "Find Alpha"
+    "Find Alpha's ID"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "bb8d505e",
+   "execution_count": 4,
+   "id": "c0ab286c",
    "metadata": {},
    "outputs": [
     {
@@ -110,11 +110,10 @@
        "0     True\n",
        "1    False\n",
        "2    False\n",
-       "3     True\n",
        "Name: Name, dtype: bool"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,10 +124,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "4ef38286",
+   "execution_count": 5,
+   "id": "5bfa878f",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -171,7 +170,7 @@
        "0  Alpha  111"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,8 +180,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "08301810",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "111"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['Name']=='Alpha']['ID'][0]"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "d578de76",
+   "id": "06466592",
    "metadata": {},
    "source": [
     "There are now two Alphas. Find both of them."
@@ -190,8 +210,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "b34f4483",
+   "execution_count": 7,
+   "id": "857877fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,8 +220,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "611ee938",
+   "execution_count": 8,
+   "id": "b618c6de",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +282,7 @@
        "3    Alpha  444"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,8 +294,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "1d07ad08",
+   "execution_count": 9,
+   "id": "abe6b266",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +344,7 @@
        "3  Alpha  444"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,8 +355,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "6fd9fe09",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[111, 444]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['Name']=='Alpha']['ID'].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a07e5fd6",
+   "id": "322931e3",
    "metadata": {},
    "outputs": [],
    "source": []
