Update Pandas - Find a Particular Value in a Dataframe.ipynb

--- a/Pandas - Find a Particular Value in a Dataframe.ipynb
+++ b/Pandas - Find a Particular Value in a Dataframe.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cda1a573",
+   "id": "c25feed3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "25f121e1",
+   "id": "54bc4efe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "077c0e55",
+   "id": "e85e509b",
    "metadata": {
     "scrolled": false
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c91345b8",
+   "id": "0ce9dfe1",
    "metadata": {},
    "source": [
     "Find Alpha's ID"
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c0ab286c",
+   "id": "17b32904",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5bfa878f",
+   "id": "ed4dbd9b",
    "metadata": {
     "scrolled": false
    },
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "08301810",
+   "id": "9364a22b",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06466592",
+   "id": "3bf0fe7d",
    "metadata": {},
    "source": [
     "There are now two Alphas. Find both of them."
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "857877fa",
+   "id": "6f3be371",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b618c6de",
+   "id": "831767b9",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "abe6b266",
+   "id": "038ee075",
    "metadata": {},
    "outputs": [
     {
@@ -355,8 +355,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "6fd9fe09",
+   "execution_count": 15,
+   "id": "7a1328f1",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
        "[111, 444]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,8 +376,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "ef8e332c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "111"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['Name']=='Alpha']['ID'].tolist()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "322931e3",
+   "id": "4a1ba90f",
    "metadata": {},
    "outputs": [],
    "source": []
