--- a/Pandas - Missing Data Detection & Removing Values.ipynb
+++ b/Pandas - Missing Data Detection & Removing Values.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example Data"
+    "# Example Data"
    ]
   },
   {
@@ -34,14 +34,7 @@
     "       'B':[40,50,46,13,26],\n",
     "       'C':[11,22,np.nan,np.nan,np.nan],\n",
     "       'D':[33,np.nan,np.nan,np.nan,np.nan],\n",
-    "       'E':[66,np.nan,np.nan,np.nan,99]}\n",
-    "\n",
-    "# data = {'A':[10,20,np.nan,12,24],\n",
-    "#        'B':[40,50,46,13,26],\n",
-    "#        'C':[11,22,np.nan,np.nan,np.nan],\n",
-    "#        'D':[33,np.nan,np.nan,np.nan,np.nan],\n",
-    "#        'E':[66,np.nan,np.nan,np.nan,99],\n",
-    "#        'F':[np.nan,np.nan,np.nan,np.nan,np.nan]}"
+    "       'E':[66,np.nan,np.nan,np.nan,99]}"
    ]
   },
   {
@@ -57,7 +50,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -149,6 +142,13 @@
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Missing Data Detection"
    ]
   },
   {
@@ -1174,17 +1174,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## pd.dropna\n",
+    "## df.notna\n",
     "```\n",
-    "df.dropna(axis=0, how='any', thresh=None, subset=None, inplace=False)\n",
+    "df.notna() -> 'DataFrame'\n",
     "```\n",
-    "Remove missing values."
+    "Detect existing (non-missing) values."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1280,7 +1282,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1313,19 +1317,55 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>10.0</td>\n",
-       "      <td>40</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>66.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      A   B     C     D     E\n",
-       "0  10.0  40  11.0  33.0  66.0"
+       "       A     B      C      D      E\n",
+       "0   True  True   True   True   True\n",
+       "1   True  True   True  False  False\n",
+       "2  False  True  False  False  False\n",
+       "3   True  True  False  False  False\n",
+       "4   True  True  False  False   True"
       ]
      },
      "execution_count": 28,
@@ -1334,145 +1374,30 @@
     }
    ],
    "source": [
-    "df.dropna(axis=0)"
+    "df.notna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Removing Values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## df.dropna\n",
+    "```\n",
+    "df.dropna(axis=0, how='any', thresh=None, subset=None, inplace=False)\n",
+    "```\n",
+    "Remove missing values."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>B</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    B\n",
-       "0  40\n",
-       "1  50\n",
-       "2  46\n",
-       "3  13\n",
-       "4  26"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.dropna(axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>A</th>\n",
-       "      <th>B</th>\n",
-       "      <th>C</th>\n",
-       "      <th>D</th>\n",
-       "      <th>E</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10.0</td>\n",
-       "      <td>40</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>66.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      A   B     C     D     E\n",
-       "0  10.0  40  11.0  33.0  66.0"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.dropna(how=\"any\")\n",
-    "#'any' : If any NA values are present, drop that row or column."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1557,20 +1482,212 @@
        "4  24.0  26   NaN   NaN  99.0"
       ]
      },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>66.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      A   B     C     D     E\n",
+       "0  10.0  40  11.0  33.0  66.0"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dropna(axis=0) #remember: default how ='any'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>B</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    B\n",
+       "0  40\n",
+       "1  50\n",
+       "2  46\n",
+       "3  13\n",
+       "4  26"
+      ]
+     },
      "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.dropna(how=\"all\")\n",
-    "#If all values are NA, drop that row or column.\n",
-    "#Remember that the default for axis=0, i.e. rows"
+    "df.dropna(axis=1)  #remember: default how ='any'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>66.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      A   B     C     D     E\n",
+       "0  10.0  40  11.0  33.0  66.0"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dropna(how=\"any\")\n",
+    "#'any' : If any NA values are present, drop that row or column.\n",
+    "#Remember default axis=0, i.e. rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -1657,7 +1774,7 @@
        "4  24.0  26.0   NaN   NaN  99.0"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1670,7 +1787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1746,18 +1863,20 @@
        "4  24.0  26.0   NaN   NaN  99.0"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2.dropna(how=\"all\")"
+    "df2.dropna(how=\"all\")\n",
+    "#If all values are NA, drop that row or column.\n",
+    "#Remember default axis=0, i.e. rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1842,7 +1961,7 @@
        "4  24.0  26   NaN NaN  99.0"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1855,8 +1974,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
+   "execution_count": 36,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1882,7 +2003,6 @@
        "      <th>A</th>\n",
        "      <th>B</th>\n",
        "      <th>C</th>\n",
-       "      <th>D</th>\n",
        "      <th>E</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1892,7 +2012,6 @@
        "      <td>10.0</td>\n",
        "      <td>40</td>\n",
        "      <td>11.0</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>66.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1901,13 +2020,11 @@
        "      <td>50</td>\n",
        "      <td>22.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>NaN</td>\n",
        "      <td>46</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -1917,13 +2034,11 @@
        "      <td>13</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>24.0</td>\n",
        "      <td>26</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>99.0</td>\n",
        "    </tr>\n",
@@ -1932,29 +2047,24 @@
        "</div>"
       ],
       "text/plain": [
-       "      A   B     C   D     E\n",
-       "0  10.0  40  11.0 NaN  66.0\n",
-       "1  20.0  50  22.0 NaN   NaN\n",
-       "2   NaN  46   NaN NaN   NaN\n",
-       "3  12.0  13   NaN NaN   NaN\n",
-       "4  24.0  26   NaN NaN  99.0"
+       "      A   B     C     E\n",
+       "0  10.0  40  11.0  66.0\n",
+       "1  20.0  50  22.0   NaN\n",
+       "2   NaN  46   NaN   NaN\n",
+       "3  12.0  13   NaN   NaN\n",
+       "4  24.0  26   NaN  99.0"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df3.dropna(how=\"all\")"
+    "df3.dropna(axis=1,how=\"all\")\n",
+    "#If all values are NA, drop that row or column.\n",
+    "#Remember that the default for axis=0, i.e. rows"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
