--- a/Pandas - Groupby.ipynb
+++ b/Pandas - Groupby.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "1697a7a4",
    "metadata": {
     "scrolled": false
@@ -166,6 +166,7 @@
        "      <th></th>\n",
        "      <th>region</th>\n",
        "      <th>AveragePrice</th>\n",
+       "      <th>4046</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -173,45 +174,47 @@
        "      <th>0</th>\n",
        "      <td>Albany</td>\n",
        "      <td>1.33</td>\n",
+       "      <td>1036.74</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Albany</td>\n",
        "      <td>1.35</td>\n",
+       "      <td>674.28</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   region  AveragePrice\n",
-       "0  Albany          1.33\n",
-       "1  Albany          1.35"
+       "   region  AveragePrice     4046\n",
+       "0  Albany          1.33  1036.74\n",
+       "1  Albany          1.35   674.28"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2 = df[['region','AveragePrice']]\n",
+    "df2 = df[['region','AveragePrice','4046']]\n",
     "df2.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "a6760782",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001FC4A4EC340>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x0000025A9BDFFE50>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "bae7cde7",
    "metadata": {
     "scrolled": true
@@ -250,9 +253,11 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>AveragePrice</th>\n",
+       "      <th>4046</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>region</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -260,44 +265,76 @@
        "    <tr>\n",
        "      <th>Albany</th>\n",
        "      <td>1.561036</td>\n",
+       "      <td>1824.081775</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Atlanta</th>\n",
        "      <td>1.337959</td>\n",
+       "      <td>146116.867959</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BaltimoreWashington</th>\n",
        "      <td>1.534231</td>\n",
+       "      <td>35656.218166</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Boise</th>\n",
        "      <td>1.348136</td>\n",
+       "      <td>20019.507604</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Boston</th>\n",
        "      <td>1.530888</td>\n",
+       "      <td>4994.610059</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     AveragePrice\n",
-       "region                           \n",
-       "Albany                   1.561036\n",
-       "Atlanta                  1.337959\n",
-       "BaltimoreWashington      1.534231\n",
-       "Boise                    1.348136\n",
-       "Boston                   1.530888"
+       "                     AveragePrice           4046\n",
+       "region                                          \n",
+       "Albany                   1.561036    1824.081775\n",
+       "Atlanta                  1.337959  146116.867959\n",
+       "BaltimoreWashington      1.534231   35656.218166\n",
+       "Boise                    1.348136   20019.507604\n",
+       "Boston                   1.530888    4994.610059"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df2.groupby(['region']).mean().head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "15cf7c2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "region\n",
+       "Albany                 1.561036\n",
+       "Atlanta                1.337959\n",
+       "BaltimoreWashington    1.534231\n",
+       "Boise                  1.348136\n",
+       "Boston                 1.530888\n",
+       "Name: AveragePrice, dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.groupby(['region'])['AveragePrice'].mean().head()"
    ]
   },
   {
